--- a/public/asset/less/style.less
+++ b/public/asset/less/style.less
@@ -2,7 +2,7 @@
 @import "bootstrap";
 @import "variables";
 
-@import (css) "../../bower_components/animate.css/animate.min.css";
+//@import (css) "../../bower_components/animate.css/animate.min.css";
 @import "header";
 @import "utility-bar";
 @import "billboard";
