Use generated urls

--- a/src/purefix/views/part/header.html
+++ b/src/purefix/views/part/header.html
@@ -7,10 +7,10 @@
 
         <div class="logo-col col-md-3 col-sm-10">
 
-            <a class="logo full" href="/">
+            <a class="logo full" href="{{url.home}}">
                 <img src="asset/img/purefix-logo-black.png" alt="Pure Fix Cycles"/>
             </a>
-            <a class="logo logo-small" href="/">
+            <a class="logo logo-small" href="{{url.home}}">
                 <img src="asset/img/purefix-logo-black.png" alt="Pure Fix Cycles"/>
             </a>
 
