--- a/src/purefix/views/part/billboard.html
+++ b/src/purefix/views/part/billboard.html
@@ -3,7 +3,7 @@
         <img src="images/billboard/IMG_3639.jpg" alt="" />
         <div class="caption">
             <h3>BİSİKLETİN YALIN HÂLİ</h3>
-            <a class="btn" href="products">Hemen sahip ol &gt;</a>
+            <a class="btn" href="{{products}}">Hemen sahip ol &gt;</a>
         </div>
     </div>
 </div>
