--- a/src/purefix/views/part/utility-bar.html
+++ b/src/purefix/views/part/utility-bar.html
@@ -5,7 +5,7 @@
             <ul class="pull-right">
                 <!-- <li><a href="/">Hakkımızda</a></li> -->
                 <!-- <li><a href="/">Videolar</a></li> -->
-                <li><a href="iletisim">İletişim</a></li>
+                <li><a href="{{url.contact}}">İletişim</a></li>
             </ul>
 
             <!-- <ul class="pull-left"> <li><a href="/">Giriş</a></li> <li><a href="/">Kaydol</a></li> </ul> -->
