Move partial to controller since it will be used only on homepage

--- a/src/purefix/views/layout/default.html
+++ b/src/purefix/views/layout/default.html
@@ -3,6 +3,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>{{meta.title}}</title>
+
+    <base href="{{url.home}}" />
     
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500&subset=latin,latin-ext' rel='stylesheet' type='text/css' />
     <link rel="stylesheet" href="asset/css/style.css" />
@@ -13,7 +15,6 @@
 
 {{> part/utility-bar }}
 {{> part/header }}
-{{> part/billboard }}
 
 
 {{{ content }}}
