Use generated urls

--- a/src/purefix/views/content/product-list.html
+++ b/src/purefix/views/content/product-list.html
@@ -6,10 +6,10 @@
         {{#each list}}
         
             <article class="product col-product">
-                <a href="product/{{slug}}" class="product-image">
+                <a href="{{url}}" class="product-image">
                     <img src="images/{{image}}" alt="" />
                 </a>
-                <a href="product/{{slug}}" class="product-name">
+                <a href="{{url}}" class="product-name">
                     {{title}}
                 </a>
             </article>
