--- a/src/purefix/views/content/product-detail.html
+++ b/src/purefix/views/content/product-detail.html
@@ -2,8 +2,6 @@
     <div class="row">
         
         <div class="col-md-6">
-            <h1>{{title}}</h1>
-            <h4>{{collection}}</h4>
             
             <div class="row">
                 
@@ -21,7 +19,10 @@
         </div>
 
         <div class="col-md-6">
-            <div> {{price}} {{price_currency}} </div>
+            <h1>{{title}}</h1>
+            <h4>{{collection}}</h4>
+            <div>{{price}} {{price_currency}}</div>
+            <p>{{description}}</p>
         </div>
 
         <div class="col-md-12">
@@ -30,6 +31,13 @@
             <img src="images/{{.}}" alt="" width="20%" />
             {{/each}}
         </div>
+        
+        {{#if description_extra }}
+        <div class="col-md-12">
+            <h4>{{title}}</h4>
+            <p>{{description_extra}}</p>
+        </div>
+        {{/if }}
 
     </div>
 </div>
