Add a generated url

--- a/src/purefix/views/part/header.html
+++ b/src/purefix/views/part/header.html
@@ -19,7 +19,7 @@
         <div class="col-md-9 col-sm-1">
             
             <ul id="main-nav">
-                <li><a href="/">BİSİKLET</a></li>
+                <li><a href="{{url.products}}">BİSİKLET</a></li>
                 <li><a href="/">YEDEK PARÇA</a></li>
                 <li><a href="/">AKSESUAR</a></li>
                 <li><a href="/">GLOW SERİSİ</a></li>
