Display variant data

--- a/src/purefix/views/content/product-detail.html
+++ b/src/purefix/views/content/product-detail.html
@@ -23,6 +23,12 @@
             <h4>{{collection}}</h4>
             <div>{{price}} {{price_currency}}</div>
             <p>{{description}}</p>
+
+            {{#each variants}}
+            <div>
+                Boy: {{title}}  Stok: {{inventory}}
+            </div>
+            {{/each }}
         </div>
 
         <div class="col-md-12">
