--- a/src/purefix/views/layout/default.html
+++ b/src/purefix/views/layout/default.html
@@ -17,7 +17,9 @@
 {{> part/header }}
 
 
-{{{ content }}}
+<div id="content">
+    {{{ content }}}
+</div>
 
 
 <script src="bower_components.js"></script>
