.product-list fluid container will not stop being fluid after @screen-md-max

--- a/public/asset/less/content/product-list.less
+++ b/public/asset/less/content/product-list.less
@@ -1,4 +1,9 @@
 .product-list {
+    
+    @media (min-width: @screen-md-max) {
+        max-width: @screen-md-max;
+    }
+
     h1 {
         font-size: @font-size-large * 1.4;
         .font-weight-bold;
