Narrow down .product-list max-width

--- a/public/asset/less/content/product-list.less
+++ b/public/asset/less/content/product-list.less
@@ -1,7 +1,7 @@
 .product-list {
     
-    @media (min-width: @screen-md-max) {
-        max-width: @screen-md-max;
+    @media (min-width: @screen-sm-max) {
+        max-width: @screen-sm-max;
     }
 
     h1 {
