Add version/revision/commit info to page
How is “VERSION” file created explained here:
https://gist.github.com/refo/30228b968d19a9a2138f

--- a/src/purefix/views/layout/default.html
+++ b/src/purefix/views/layout/default.html
@@ -21,6 +21,9 @@
     {{{ content }}}
 </div>
 
+{{#if meta.version}}
+    <div id="version">purefix {{meta.version}}</div>
+{{/if }}
 
 <script src="bower_components.js"></script>
 <script src="asset/js/script.js"></script>
