Import product-detail and slick styles

--- a/public/asset/less/style.less
+++ b/public/asset/less/style.less
@@ -1,12 +1,17 @@
 
+@import (inline, css) "../../bower_components/slick-carousel/slick/slick.css";
+//@import (inline, css) "../../bower_components/slick-carousel/slick/slick-theme.css";
+@import "slick-theme";
+
+
 @import "bootstrap";
 @import "variables";
 
-//@import (css) "../../bower_components/animate.css/animate.min.css";
 @import "header";
 @import "utility-bar";
 @import "billboard";
 @import "content/product-list";
+@import "content/product-detail";
 
 body {
     background: @gray-lighter;
