Change compiled js location

--- a/src/purefix/views/layout/default.html
+++ b/src/purefix/views/layout/default.html
@@ -25,8 +25,8 @@
     <div id="version">purefix {{meta.version}}</div>
 {{/if }}
 
-<script src="bower_components.js"></script>
-<script src="asset/js/script.js"></script>
+
+<script src="asset/js/script-min.js"></script>
 
 </body>
 </html>
