--- a/src/purefix/views/content/product-detail.html
+++ b/src/purefix/views/content/product-detail.html
@@ -5,10 +5,9 @@
             
             <div class="row">
                 
-                <div class="col-md-12">
-                    <i>Product images</i>
+                <div class="product-images col-md-12">
                     {{#each images}}
-                    <img src="images/{{.}}" alt="" width="20%" />
+                    <img src="images/{{.}}" alt=""  />
                     {{/each}}                    
                 </div>
 
