--- a/public/asset/less/slick-theme.less
+++ b/public/asset/less/slick-theme.less
@@ -19,6 +19,7 @@
 .slick-prev,
 .slick-next
 {
+    z-index: 10;
     font-size: 0;
     line-height: 0;
 
@@ -65,7 +66,7 @@
 .slick-next:before
 {
     font-family: 'slick';
-    font-size: 20px;
+    font-size: 30px;
     line-height: 1;
 
     opacity: .75;
@@ -77,7 +78,7 @@
 
 .slick-prev
 {
-    left: 0;
+    left: 10px;
 }
 [dir='rtl'] .slick-prev
 {
@@ -95,7 +96,7 @@
 
 .slick-next
 {
-    right: 0;
+    right: 10px;
 }
 [dir='rtl'] .slick-next
 {
@@ -115,6 +116,7 @@
 .slick-slider
 {
     margin-bottom: 30px;
+    overflow: hidden;
 }
 
 .slick-dots
