--- a/src/purefix/views/content/product-detail.html
+++ b/src/purefix/views/content/product-detail.html
@@ -1,27 +1,16 @@
 <div class="product-detail container-fluid">
     <div class="row">
         
-        <div class="col-md-6">
-            
-            <div class="row">
-                
-                <div class="product-images col-md-12">
-                    {{#each images}}
-                    <img src="images/{{.}}" alt=""  />
-                    {{/each}}                    
-                </div>
-
-            </div>
-
-
-            
+        <div class="product-images col-md-6">
+            {{#each images}}
+            <img src="images/{{.}}" alt=""  />
+            {{/each}}
         </div>
 
         <div class="col-md-6">
-            <h1>{{title}}</h1>
+            <h1 class="product-title">{{title}} - <span class="price">{{hprice}}</span></h1>
+            <p class="product-description">{{description}}</p>
             <h4>{{collection}}</h4>
-            <div>{{price}} {{price_currency}}</div>
-            <p>{{description}}</p>
 
             {{#each variants}}
             <div>
@@ -30,19 +19,19 @@
             {{/each }}
         </div>
 
-        <div class="col-md-12">
-            <i>Lifestyle images</i>
-            {{#each images_extra}}
-            <img src="images/{{.}}" alt="" width="20%" />
-            {{/each}}
-        </div>
-        
         {{#if description_extra }}
-        <div class="col-md-12">
-            <h4>{{title}}</h4>
+        <div class="product-description-x col-md-10 col-md-offset-1">
+            <h2>{{title}}</h2>
             <p>{{description_extra}}</p>
         </div>
         {{/if }}
+
+        <div class="lifestyle-images col-md-12">
+            {{#each images_extra}}
+                <img src="images/{{.}}" alt="" />
+            {{/each}}
+        </div>
+        
 
     </div>
 </div>
