Style footer / Add separate style file for footer

--- a/public/asset/less/style.less
+++ b/public/asset/less/style.less
@@ -8,6 +8,7 @@
 @import "variables";
 
 @import "header";
+@import "footer";
 @import "utility-bar";
 @import "billboard";
 @import "content/product-list";
@@ -20,7 +21,8 @@ body {
     background: white;
 }
 
-.container-fluid {
+.container-fluid,
+.container {
     background: white;
 }
 
