--- a/src/purefix/views/part/footer.html
+++ b/src/purefix/views/part/footer.html
@@ -1,13 +1,14 @@
-<div class="container">
+<div class="container-fluid">
     
     <div class="col-md-6"></div>
     <div class="col-md-6"></div>
     
-    <div class="col-md-6"></div>
     <div class="col-md-6">
         {{#if meta.version}}
             <div id="version">purefix {{meta.version}}</div>
-        {{/if }}
+        {{/if }}        
+    </div>
+    <div class="col-md-6">
     </div>
 
 </div>
