wrap product info with  its own .row to add vertical margin / move description extra below the litestyle images

--- a/public/asset/less/content/product-detail.less
+++ b/public/asset/less/content/product-detail.less
@@ -1,6 +1,12 @@
 .product-detail {
+
+    .detail.row {
+        margin-bottom: 30px;
+        margin-top: 30px;
+    }
     
     .product-images {
+        overflow: hidden;
         @media (max-width: @screen-sm-max) {
             padding: 0;
         }
@@ -11,6 +17,7 @@
     }
 
     .lifestyle-images {
+        overflow: hidden;
         padding: 0;
         img {
             width: 100%;
