Add accessors for description fields, convert newlines to html br

--- a/public/asset/less/content/product-detail.less
+++ b/public/asset/less/content/product-detail.less
@@ -48,6 +48,7 @@
     p.product-description {
         .font-weight-light;
         font-size: @font-size-large * 1.5;
+        margin-bottom: 30px;
     }
 
     .product-description-x {
