Add query scope Product::getDetail($slug)
Find product and its variants by product slug.
Modify variants to suit view’s needs.
Set first variant with positive inventory “active option” by adding
“active” css class.
Modify size selector elements accordingly.

--- a/public/asset/less/content/product-detail.less
+++ b/public/asset/less/content/product-detail.less
@@ -55,7 +55,12 @@
         .font-weight-light;
         font-size: @font-size-large * 1.5;
         .text-center;
+    }
 
+    .product-options.size-options {
+        .btn {
+            padding:20px 30px;
+        }
     }
 
 }
