Change headline style

--- a/public/asset/less/billboard.less
+++ b/public/asset/less/billboard.less
@@ -35,6 +35,9 @@
             h3 {
                 .font-weight-bold;
                 font-size: @font-size-large * 1.5;
+                span {
+                    .font-weight-light;
+                }
             }
             h4 {
                 .font-weight-light;
