--- a/src/purefix/views/part/billboard.html
+++ b/src/purefix/views/part/billboard.html
@@ -2,7 +2,7 @@
     <div class="slide">
         <img src="images/billboard/IMG_3639.jpg" alt="" />
         <div class="caption">
-            <h3>BİSİKLETİN YALIN HÂLİ</h3>
+            <h3>Bisikletin <span>Yalın</span> Hali</h3>
             <a class="btn" href="{{products}}">Hemen sahip ol &gt;</a>
         </div>
     </div>
