--- a/public/asset/less/billboard.less
+++ b/public/asset/less/billboard.less
@@ -35,6 +35,7 @@
             h3 {
                 .font-weight-bold;
                 font-size: @font-size-large * 1.5;
+                text-shadow: 2px 2px 3px rgba(0,0,0,0.5);
                 span {
                     .font-weight-light;
                 }
