Add tooltip to disabled menu items

--- a/src/purefix/views/part/header.html
+++ b/src/purefix/views/part/header.html
@@ -17,10 +17,10 @@
             
             <ul id="main-nav">
                 <li><a href="{{url.products}}">BİSİKLET</a></li>
-                <li><a href="/">YEDEK PARÇA</a></li>
-                <li><a href="/">AKSESUAR</a></li>
+                <li><a data-toggle="tooltip" title="PEK YAKINDA" data-placement="bottom" href="#">YEDEK PARÇA</a></li>
+                <li><a data-toggle="tooltip" title="PEK YAKINDA" data-placement="bottom" href="#">AKSESUAR</a></li>
                 <li><a href="/">GLOW SERİSİ</a></li>
-                <li><a href="/">TRACK SERİSİ</a></li>
+                <li><a data-toggle="tooltip" title="PEK YAKINDA" data-placement="bottom" href="#">TRACK SERİSİ</a></li>
                 <li><a href="/">FIRSAT</a></li>
             </ul>
 
