--- a/src/purefix/views/part/utility-bar.html
+++ b/src/purefix/views/part/utility-bar.html
@@ -5,6 +5,7 @@
             <ul class="pull-right">
                 <!-- <li><a href="/">Hakkımızda</a></li> -->
                 <!-- <li><a href="/">Videolar</a></li> -->
+                <li><a href="{{url.servisler}}">Servis Noktaları</a></li>
                 <li><a href="{{url.contact}}">İletişim</a></li>
             </ul>
 
