--- a/src/purefix/views/part/billboard.html
+++ b/src/purefix/views/part/billboard.html
@@ -1,9 +1,9 @@
 <div id="billboard">
     <div class="slide">
-        <img src="images/billboard/IMG_3639.jpg" alt="" style="margin-top:-20%" />
+        <img src="images/billboard/{{image.filename}}" alt="" style="{{image.style}}" />
         <div class="caption">
             <h3>Bisikletin <span>Yalın</span> Hali</h3>
-            <a class="btn" href="{{products}}">Hemen sahip ol &gt;</a>
+            <a class="btn" href="{{urls.products}}">Hemen sahip ol &gt;</a>
         </div>
     </div>
 </div>
