Create a vimeo bbs helper ...
Create a sample view for vimeo helper.
Add a style file for view.
Tweak styles, make centred heading style global.

--- a/public/asset/less/content/product-list.less
+++ b/public/asset/less/content/product-list.less
@@ -4,19 +4,14 @@
         max-width: @screen-sm-max;
     }
 
-    h1 {
-        font-size: @font-size-large * 1.4;
-        .font-weight-bold;
-        letter-spacing: 1.7;
-        text-align: center;
-        margin: 50px 0;
-        color: black;
-    }
     .product-image {
         width: 100%;
         img {
             width: 100%;
         }
+    }
+    h1 {
+        .pf-h-centered;
     }
     .product-name {
         .font-size-large;
