--- a/public/asset/less/style.less
+++ b/public/asset/less/style.less
@@ -11,6 +11,7 @@
 @import "footer";
 @import "utility-bar";
 @import "billboard";
+@import "videos";
 @import "content/product-list";
 @import "content/product-detail";
 
@@ -23,6 +24,15 @@ body {
 
 h1 {
     .font-weight-normal;
+}
+
+.pf-h-centered {
+    font-size: @font-size-large * 1.4;
+    .font-weight-bold;
+    letter-spacing: 1.7;
+    text-align: center;
+    margin: 50px 0;
+    color: black;
 }
 
 .container-fluid,
