--- a/src/purefix/views/part/home/billboard.html
+++ b/src/purefix/views/part/home/billboard.html
@@ -3,7 +3,7 @@
         <img src="images/billboard/{{image.filename}}" alt="" style="{{image.style}}" />
         <div class="caption">
             <h3>Bisikletin <span>Yalın</span> Hali</h3>
-            <a class="btn" href="{{urls.products}}">Hemen sahip ol &gt;</a>
+            <a class="btn" href="{{url}}">Hemen sahip ol &gt;</a>
         </div>
     </div>
 </div>
