--- a/src/purefix/views/content/product-list.html
+++ b/src/purefix/views/content/product-list.html
@@ -17,11 +17,11 @@
 
         {{#if more}}
             {{#with more}}
-                <div class="col-xs-12">
-                    <div class="row">
-                        <a href="{{url}}" class="col-sm-4 btn-centered btn-primary">{{title}}</a>
-                    </div>
+            <div class="col-xs-12">
+                <div class="row">
+                    <a href="{{url}}" class="col-xs-4 btn-centered btn-primary">{{title}}</a>
                 </div>
+            </div>
             {{/with }}
         {{/if }}
 
