List and link to videos page

--- a/public/asset/less/style.less
+++ b/public/asset/less/style.less
@@ -35,6 +35,15 @@ h1 {
     color: black;
 }
 
+.table-row {
+    display: table;
+}
+.table-col {
+    display: table-cell;
+    vertical-align: top;
+    float: none;
+}
+
 .container-fluid,
 .container {
     background: white;
