--- a/src/purefix/views/part/home/home-videos.html
+++ b/src/purefix/views/part/home/home-videos.html
@@ -1,14 +1,28 @@
 
 <div class="container-fluid">
+
     <h1 class="pf-h-centered">PURE FIX TV</h1>
-    <div class="vimeo video-col col-md-6">
-        {{#vimeo 132883374}}
-        <h4>Pure Fix Originals – DTLA</h4>
-        <p>Our Original Series take to the streets where they were born, downtown LA. From bike lanes to bridges, skyscrapers to Sunset, and everything in between – Pure Fix is all about freedom, movement, and getting out there. Come ride with us. http://purefixcycles.com</p>
+    
+    <div class="vimeo video-row row">
+
+        <div class="vimeo video-col col-md-6">
+            {{#vimeo 132883374}}
+            <h4>Pure Fix Originals – DTLA</h4>
+            <p>Our Original Series take to the streets where they were born, downtown LA. From bike lanes to bridges, skyscrapers to Sunset, and everything in between – Pure Fix is all about freedom, movement, and getting out there. Come ride with us. http://purefixcycles.com</p>
+        </div>
+
+        <div class="vimeo video-col col-md-6">
+            {{#vimeo 89629600}}
+            <h4>Encino Velodrome 'Swap Your Legs' Race</h4>
+            <p>Saturday, March 15th, the Pure Fix // .elohssa team ventured out to the Encino Velodrome to race, hang and have a good time. Here's the full, unabridged video, per your request! Enjoy!</p>
+        </div>
+
+        <div class="col-xs-12">
+            <div class="row">
+                <a href="{{url}}" class="col-xs-4 btn-centered btn-primary">PURE FIX TV</a>
+            </div>
+        </div>
+
     </div>
-    <div class="vimeo video-col col-md-6">
-        {{#vimeo 89629600}}
-        <h4>Encino Velodrome 'Swap Your Legs' Race</h4>
-        <p>Saturday, March 15th, the Pure Fix // .elohssa team ventured out to the Encino Velodrome to race, hang and have a good time. Here's the full, unabridged video, per your request! Enjoy!</p>
-    </div>
+
 </div>
