--- a/src/purefix/views/content/home.html
+++ b/src/purefix/views/content/home.html
@@ -1,6 +1,6 @@
 
 {{> part/home/billboard billboard }}
 
-{{> part/home/home-videos }}
+{{> part/home/home-videos videos }}
 
 {{> content/product-list popular }}
