--- a/src/purefix/views/layout/default.html
+++ b/src/purefix/views/layout/default.html
@@ -7,7 +7,8 @@
     <title>{{meta.title}}</title>
 
     <base href="{{url.home}}" />
-    
+    <link rel="icon" href="/favicon.ico" />
+
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,500&subset=latin,latin-ext' rel='stylesheet' type='text/css' />
     <link rel="stylesheet" href="asset/css/style.css" />
 
