--- a/src/purefix/views/part/header.html
+++ b/src/purefix/views/part/header.html
@@ -19,7 +19,7 @@
                 <li><a href="{{url.products}}">BİSİKLET</a></li>
                 <li><a data-toggle="tooltip" title="PEK YAKINDA" data-placement="bottom" href="#">YEDEK PARÇA</a></li>
                 <li><a data-toggle="tooltip" title="PEK YAKINDA" data-placement="bottom" href="#">AKSESUAR</a></li>
-                <li><a href="/">GLOW SERİSİ</a></li>
+                <li><a href="{{url.glow}}">GLOW SERİSİ</a></li>
                 <li><a data-toggle="tooltip" title="PEK YAKINDA" data-placement="bottom" href="#">TRACK SERİSİ</a></li>
                 <li><a href="/">FIRSAT</a></li>
             </ul>
