Create "Sale" page
İndirimli ürünler için boş sayfa

--- a/src/purefix/views/part/header.html
+++ b/src/purefix/views/part/header.html
@@ -21,7 +21,7 @@
                 <li><a data-toggle="tooltip" title="PEK YAKINDA" data-placement="bottom" href="#">AKSESUAR</a></li>
                 <li><a href="{{url.glow}}">GLOW SERİSİ</a></li>
                 <li><a data-toggle="tooltip" title="PEK YAKINDA" data-placement="bottom" href="#">TRACK SERİSİ</a></li>
-                <li><a href="/">FIRSAT</a></li>
+                <li><a href="{{url.sale}}">FIRSAT</a></li>
             </ul>
 
         </div>
