--- a/public/asset/less/content/product-detail.less
+++ b/public/asset/less/content/product-detail.less
@@ -63,4 +63,11 @@
         }
     }
 
+    .product-buy {
+        margin-top: 30px;
+        a:hover {
+            text-decoration: none;
+        }
+    }
+
 }
