Make nav#brand stick to the top

--- a/src/purefix/views/part/header.html
+++ b/src/purefix/views/part/header.html
@@ -1,5 +1,5 @@
 <header id="main-header" class="container-fluid">
-    <nav id="brand" class="row">
+    <nav id="brand" class="row" data-spy="affix" data-offset-top="37">
 
 
         <div class="logo-col col-md-3 col-sm-10">
