--- a/public/asset/less/header.less
+++ b/public/asset/less/header.less
@@ -1,6 +1,14 @@
 
 #brand {
 
+    z-index: 11;
+    background: rgba(255, 255, 255, .9);
+    transition: all 0.1s linear;
+
+    &.affix {
+        top:0;
+    }
+
     .logo-col {
         overflow: hidden;
         position: relative;
@@ -86,6 +94,9 @@ ul#main-nav li a {
 header#main-header {
     border-bottom: @gray-lighter 1px solid;
     background-color: fade(#FFF, 95%);
+    
+    height: 75px; // nav#brand yüksekliği
+
     &.stuck {
         position: fixed;
         top:0;
