Add phone number to utility bar

--- a/src/purefix/views/part/utility-bar.html
+++ b/src/purefix/views/part/utility-bar.html
@@ -1,7 +1,9 @@
 <div id="utility-bar" class="container-fluid">
     <div class="row">
         <div class="col-md-12">
-
+            <ul class="pull-left">
+                <li><a href="#">+90 545 PUREFIX</a></li>
+            </ul>
             <ul class="pull-right">
                 <!-- <li><a href="/">Hakkımızda</a></li> -->
                 <!-- <li><a href="/">Videolar</a></li> -->
