--- a/public/asset/less/footer.less
+++ b/public/asset/less/footer.less
@@ -2,3 +2,21 @@
     color: @gray-light;
     .font-size-small;
 }
+
+#footer {
+    
+    border-top: @gray-lighter 1px solid;
+
+    .row {
+        margin: 30px 0;
+    }
+
+    .page-links {
+        display: flex;
+        justify-content: space-between;
+        a {
+            display: inline-block;
+        }
+    }
+
+}
