fontello + footer social links

--- a/public/asset/less/footer.less
+++ b/public/asset/less/footer.less
@@ -18,5 +18,13 @@
             display: inline-block;
         }
     }
+    
+    .social-links {
+        display: flex;
+        justify-content: space-around;
+        a {
+            display: inline-block;
+        }
+    }
 
 }
