--- a/src/purefix/views/layout/default.html
+++ b/src/purefix/views/layout/default.html
@@ -11,6 +11,7 @@
 
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,500&subset=latin,latin-ext' rel='stylesheet' type='text/css' />
     <link rel="stylesheet" href="asset/css/style.css" />
+    <link rel="stylesheet" href="asset/fontello/css/fontello.css" />
 
 </head>
 <body>
