Change homepage video

--- a/src/purefix/views/part/home/home-videos.html
+++ b/src/purefix/views/part/home/home-videos.html
@@ -12,9 +12,11 @@
         </div>
 
         <div class="vimeo video-col col-md-6">
-            {{#vimeo 89629600}}
-            <h4>Encino Velodrome 'Swap Your Legs' Race</h4>
-            <p>Saturday, March 15th, the Pure Fix // .elohssa team ventured out to the Encino Velodrome to race, hang and have a good time. Here's the full, unabridged video, per your request! Enjoy!</p>
+            {{#vimeo 74879287}}
+            <h4>Pure City</h4>
+            <p>Introducing Pure City - bikes designed to fit your life, your speed, your city.
+            <br />
+            We took these new beauties out for a spin around our own city, Los Angeles. Check it out!</p>
         </div>
 
         <div class="col-xs-12">
