social links, header nav styling

--- a/public/asset/less/footer.less
+++ b/public/asset/less/footer.less
@@ -15,14 +15,18 @@
         display: flex;
         justify-content: space-between;
         a {
+            color:#000;
             display: inline-block;
         }
     }
-    
+
     .social-links {
         display: flex;
         justify-content: space-around;
         a {
+            color:#000;
+            .font-size-large;
+            text-decoration: none;
             display: inline-block;
         }
     }
