header border bottom

--- a/public/asset/less/header.less
+++ b/public/asset/less/header.less
@@ -3,7 +3,7 @@
 
     z-index: 11;
     background: rgba(255, 255, 255, .95);
-    transition: all 0.1s linear;
+    border-bottom: @gray-lighter 1px solid;
 
     &.affix {
         top:0;
