--- a/src/purefix/views/content/product-detail.html
+++ b/src/purefix/views/content/product-detail.html
@@ -12,7 +12,7 @@
             <h1 class="product-title">{{title}} - <span class="price">{{hprice}}</span></h1>
             <p class="product-description">{{{ description }}}</p>
 
-            <h4>Ölçüler</h4>
+            <h4>Kadro boyu</h4>
             <div class="product-options size-options btn-group" data-toggle="buttons">
             {{#each variants}}
                 <label class="btn btn-default">
@@ -49,6 +49,18 @@
             <p>{{{ description_extra }}}</p>
         </div>
         {{/if }}
+
+        {{> part/product/size }}
+
+        <div class="product-description-x col-md-10 col-md-offset-1">
+            <h2>Güven Veren Garanti</h2>
+            <p>
+                Bisikletlerimize güvendiğimiz için ürünlerimizin arkasındayız. Müşterilerimizin
+                oluşabilecek küçük problemleri kafasına takmadan sürüşünden keyif almasını istiyoruz.
+                Bu yüzden hayat boyu kadro ve 2 yıl parça garantisi veriyoruz. Bu sayede kendinizi
+                güvende hissedecek ve sürüşünüzden keyif alacaksınız.
+            </p>
+        </div>
 
     </div>
 
