--- a/src/purefix/views/content/product-detail.html
+++ b/src/purefix/views/content/product-detail.html
@@ -57,7 +57,7 @@
             <p>
                 Bisikletlerimize güvendiğimiz için ürünlerimizin arkasındayız. Müşterilerimizin
                 oluşabilecek küçük problemleri kafasına takmadan sürüşünden keyif almasını istiyoruz.
-                Bu yüzden hayat boyu kadro ve 2 yıl parça garantisi veriyoruz. Bu sayede kendinizi
+                Bu yüzden, ömür boyu kadro ve 2 yıl parça garantisi veriyoruz. Bu sayede kendinizi
                 güvende hissedecek ve sürüşünüzden keyif alacaksınız.
             </p>
         </div>
