added zoom.js but disabled...
Blank screen instead of zoomed-in image. Image seems like staying in
the right place thought. Should be something to do with “slick” plug-in.

--- a/public/asset/less/style.less
+++ b/public/asset/less/style.less
@@ -1,8 +1,10 @@
+@bower: "../../bower_components";
 
-@import (inline, css) "../../bower_components/slick-carousel/slick/slick.css";
+@import (inline, css) "@{bower}/slick-carousel/slick/slick.css";
 //@import (inline, css) "../../bower_components/slick-carousel/slick/slick-theme.css";
 @import "slick-theme";
 
+@import (inline, css) "@{bower}/zoom.js/css/zoom.css";
 
 @import "bootstrap";
 @import "variables";
