Change detail page content heading margin

--- a/public/asset/less/content/product-detail.less
+++ b/public/asset/less/content/product-detail.less
@@ -55,6 +55,10 @@
         .font-weight-light;
         font-size: @font-size-large * 1.5;
         .text-center;
+        h2 {
+            margin-top: 40px;
+            margin-bottom: 30px;
+        }
     }
 
     .product-options.size-options {
