minor changes/corrections

--- a/src/purefix/views/content/product-detail.html
+++ b/src/purefix/views/content/product-detail.html
@@ -79,7 +79,7 @@
 
         {{#if purefix }}
         <div class="product-description-x col-md-10 col-md-offset-1">
-            <h2>SABİT DİŞLİ Mİ SERBEST DİŞLİ Mİ?</h2>
+            <h2>Sabit Dişli Mi Serbest Dişli Mi ?</h2>
             <div class="row">
 
                 <div class="col-sm-5">
