--- a/src/purefix/views/content/product-detail.html
+++ b/src/purefix/views/content/product-detail.html
@@ -88,7 +88,7 @@
 
                 <div class="col-sm-7">
                     <p>
-                        Pure Fix Cycles modellerinde sizler için ister sabit dişli (fixed gear ya da fixie), isterse serbest dişli (Freewheel) kullanıma izin veren dönüşümlü arka göbek seçtik. Sabit dişli sürüş, hem bisikletinizle hem de yolla eşsiz bir bağ kurmanızı sağlar ve mükemmel bir pedal hissi verir. Serbest dişli sürüş ise tıpkı tek rubleli çocukluk bisikletiniz gibi süzülerek gezinmenize olanak tanır. Hangi sürüşü seçerseniz seçin, standart donanımda yer alan ön freniniz her iki şekilde de durmanızı garanti ediyor.
+                        Pure Fix Cycles modellerinde sizler için hem sabit dişli (fixed gear ya da fixie), hem de serbest dişli (Freewheel) kullanıma izin veren dönüşümlü arka göbek seçtik. Sabit dişli sürüş, hem bisikletinizle hem de yolla eşsiz bir bağ kurmanızı sağlar ve mükemmel bir pedal hissi verir. Serbest dişli sürüş ise tıpkı tek rubleli çocukluk bisikletiniz gibi süzülerek gezinmenize olanak tanır. Hangi sürüşü seçerseniz seçin, standart donanımda yer alan ön freniniz her iki şekilde de durmanızı garanti ediyor.
                     </p>                    
                 </div>
 
