--- a/src/purefix/views/part/utility-bar.html
+++ b/src/purefix/views/part/utility-bar.html
@@ -8,6 +8,7 @@
                 <!-- <li><a href="/">Hakkımızda</a></li> -->
                 <!-- <li><a href="/">Videolar</a></li> -->
                 <li><a href="{{url.servisler}}">Servis Noktaları</a></li>
+                <li><a href="{{url.satis}}">Satış Noktaları</a></li>
                 <li><a href="{{url.contact}}">İletişim</a></li>
             </ul>
 
