--- a/src/purefix/views/part/footer.html
+++ b/src/purefix/views/part/footer.html
@@ -15,10 +15,10 @@
             <a class="icon-facebook" href="https://www.facebook.com/pages/purefixturkiye/419357121584892" title="Pure Fix Cycles on Facebook"></a>
             <a class="icon-twitter" href="https://twitter.com/purefixturkiye" title="Pure Fix Cycles on Twitter"></a>
             <a class="icon-instagram" href="http://instagram.com/purefixturkiye/" title="Pure Fix Cycles on Instagram"></a>
-            <a class="icon-youtube-play" href="http://vimeo.com/pfcycles/" title="Pure Fix Cycles on Vimeo"></a>
+            <!-- <a class="icon-youtube-play" href="http://vimeo.com/pfcycles/" title="Pure Fix Cycles on Vimeo"></a> -->
             <a class="icon-gplus" href="https://plus.google.com/115624288550078129494/" title="Pure Fix Cycles on Google Plus"></a>
-            <a class="icon-pinterest-circled" href="http://pinterest.com/pfcycles/" title="Pure Fix Cycles on Pinterest"></a>
-            <a class="icon-flickr" href="http://www.flickr.com/photos/pfcycles/" title="Pure Fix Cycles on Flickr"></a>
+            <!-- <a class="icon-pinterest-circled" href="http://pinterest.com/pfcycles/" title="Pure Fix Cycles on Pinterest"></a> -->
+            <!-- <a class="icon-flickr" href="http://www.flickr.com/photos/pfcycles/" title="Pure Fix Cycles on Flickr"></a> -->
         </div>
 
     </div>
