--- a/src/purefix/views/content/iletisim.html
+++ b/src/purefix/views/content/iletisim.html
@@ -4,9 +4,8 @@
         <div class="col-md-12">
             
             <h1>İletişim</h1>
-            
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque fuga, sequi repellat voluptate dolor, ratione explicabo ipsum sunt fugit at deserunt iure nam, perferendis nemo quia alias quae sint? Accusamus?
-
+            <h3>+90 545 PUREFIX</h3>
+            <h3>info@purefixturkiye.com</h3>
         </div>
 
 
